--- a/doc/paper_draft/sections/4-result.tex
+++ b/doc/paper_draft/sections/4-result.tex
@@ -411,23 +411,35 @@ However, `w/o weight' performs slightly better on the complete dataset.
 		\toprule
 		&  Method & ${EPE}\downarrow$ & $AAE\downarrow$ & $RMS\downarrow$ & $SEPE\downarrow$ & ${SAAE}\downarrow$ & ${SRMS}\downarrow$ \\
 		\midrule
-		\multirow{3}{*}{\rotatebox[origin=c]{90}{\hspace{-1em}\emph{Circle}}}
-		& Full method  &     4.988 &     0.1885 &     39.26 &     0.007241 &     0.05278 &     0.01824 \\ 
-		& w/o weight   & \bf 4.854 & \bf 0.1863 & \bf 37.10 & \bf 0.007118 & \bf 0.05074 &     0.01899 \\
-		& w/o ERP      &     4.961 &     0.1871 &     38.32 &     0.007165 &     0.05094 &     0.01504 \\ 
-		& w/o cubemap  &     4.956 &     0.1881 &     38.22 &     0.007171 &     0.05241 & \bf 0.01451 \\ 
+		\multirow{4}{*}{\rotatebox[origin=c]{90}{\emph{Circle}}}
+%		& Full method  &     4.988 &     0.1885 &     39.26 &     0.007241 &     0.05278 &     0.01824 \\
+%		& w/o weight   & \bf 4.854 & \bf 0.1863 & \bf 37.10 & \bf 0.007118 & \bf 0.05074 &     0.01899 \\
+%		& w/o ERP      &     4.961 &     0.1871 &     38.32 &     0.007165 &     0.05094 &     0.01504 \\
+%		& w/o cubemap  &     4.956 &     0.1881 &     38.22 &     0.007171 &     0.05241 & \bf 0.01451 \\
+		& Full method  &\new{x.xxx}&\new{0.xxxx}&\new{xx.xx}&\new{0.0xxxxx}&\new{0.0xxxx}&\new{0.0xxxx}\\
+		& w/o weight   &\new{x.xxx}&\new{0.xxxx}&\new{xx.xx}&\new{0.0xxxxx}&\new{0.0xxxx}&\new{0.0xxxx}\\
+		& w/o ERP      &\new{x.xxx}&\new{0.xxxx}&\new{xx.xx}&\new{0.0xxxxx}&\new{0.0xxxx}&\new{0.0xxxx}\\
+		& w/o cubemap  &\new{x.xxx}&\new{0.xxxx}&\new{xx.xx}&\new{0.0xxxxx}&\new{0.0xxxx}&\new{0.0xxxx}\\
 		\midrule
-		\multirow{3}{*}{\rotatebox[origin=c]{90}{\hspace{-1em}\emph{Line}}} 
-		& Full method  &     10.41 &     0.2461 &     55.78 & \bf 0.01533 &     0.08943 & \bf 0.03448 \\
-		& w/o weight   & \bf 10.13 &     0.2447 & \bf 48.60 &     0.01600 & \bf 0.08798 &     0.03566 \\ 
-		& w/o ERP      &     10.82 & \bf 0.2648 &     56.48 &     0.01580 &     0.09090 &     0.03519 \\ 
-		& w/o cubemap  &     10.88 &     0.2484 &     57.61 &     0.01575 &     0.08987 &     0.03535 \\ 
+		\multirow{4}{*}{\rotatebox[origin=c]{90}{\emph{Line}}} 
+%		& Full method  &     10.41 &     0.2461 &     55.78 & \bf 0.01533 &     0.08943 & \bf 0.03448 \\
+%		& w/o weight   & \bf 10.13 &     0.2447 & \bf 48.60 &     0.01600 & \bf 0.08798 &     0.03566 \\
+%		& w/o ERP      &     10.82 & \bf 0.2648 &     56.48 &     0.01580 &     0.09090 &     0.03519 \\
+%		& w/o cubemap  &     10.88 &     0.2484 &     57.61 &     0.01575 &     0.08987 &     0.03535 \\
+		& Full method  &\new{x.xxx}&\new{0.xxxx}&\new{xx.xx}&\new{0.0xxxx}&\new{0.0xxxx}&\new{0.0xxxx}\\
+		& w/o weight   &\new{x.xxx}&\new{0.xxxx}&\new{xx.xx}&\new{0.0xxxx}&\new{0.0xxxx}&\new{0.0xxxx}\\
+		& w/o ERP      &\new{x.xxx}&\new{0.xxxx}&\new{xx.xx}&\new{0.0xxxx}&\new{0.0xxxx}&\new{0.0xxxx}\\
+		& w/o cubemap  &\new{x.xxx}&\new{0.xxxx}&\new{xx.xx}&\new{0.0xxxx}&\new{0.0xxxx}&\new{0.0xxxx}\\
 		\midrule
 		\multirow{4}{*}{\rotatebox[origin=c]{90}{\emph{All}}}
-		& Full method  &     8.602 &     0.2270 &     50.27 &     0.01264 &     0.07722 &     0.02907 \\
-		& w/o weight   & \bf 7.524 & \bf 0.2130 & \bf 42.94 &     0.01161 & \bf 0.06967 &     0.02741 \\
-		& w/o ERP      &     7.889 &     0.2260 &     47.40 &     0.01149 &     0.07092 &     0.02512 \\
-		& w/o cubemap  &     7.921 &     0.2182 &     47.91 & \bf 0.01146 &     0.07114 & \bf 0.02492 \\
+%		& Full method  &     8.602 &     0.2270 &     50.27 &     0.01264 &     0.07722 &     0.02907 \\
+%		& w/o weight   & \bf 7.524 & \bf 0.2130 & \bf 42.94 &     0.01161 & \bf 0.06967 &     0.02741 \\
+%		& w/o ERP      &     7.889 &     0.2260 &     47.40 &     0.01149 &     0.07092 &     0.02512 \\
+%		& w/o cubemap  &     7.921 &     0.2182 &     47.91 & \bf 0.01146 &     0.07114 & \bf 0.02492 \\
+		& Full method  &\new{x.xxx}&\new{0.xxxx}&\new{xx.xx}&\new{0.0xxxx}&\new{0.0xxxx}&\new{0.0xxxx}\\
+		& w/o weight   &\new{x.xxx}&\new{0.xxxx}&\new{xx.xx}&\new{0.0xxxx}&\new{0.0xxxx}&\new{0.0xxxx}\\
+		& w/o ERP      &\new{x.xxx}&\new{0.xxxx}&\new{xx.xx}&\new{0.0xxxx}&\new{0.0xxxx}&\new{0.0xxxx}\\
+		& w/o cubemap  &\new{x.xxx}&\new{0.xxxx}&\new{xx.xx}&\new{0.0xxxx}&\new{0.0xxxx}&\new{0.0xxxx}\\
 		\bottomrule
 	\end{tabular}}%
 \end{table}%\vspace{-2em}
