--- a/doc/paper_draft/sections/1-introduction.tex
+++ b/doc/paper_draft/sections/1-introduction.tex
@@ -44,6 +44,8 @@ To overcome the limited spatial resolution supported by these methods, other wor
 %
 Moreover, these tangent images are based on \emph{gnomonic} projection, which is a common tool used in geography to map a sphere to a plane, as the great circle on the sphere maps to a straight line in the tangent image~\cite{EderSLF2020}.
 %
+\new{This principle has been applied to tasks such as monocular depth estimation \cite{WangHCLYSCS2018, WangYSCT2020}, semantic segmentation \cite{EderSLF2020, ZhangLSC2019}, and classification \cite{EderSLF2020, LuoZSX2019, LeeJYJY2019}, but not yet to optical flow.}
+%
 %Meanwhile, to make the spherical sampled uniformly, the tangent points (gnomonic projection centre point) selected base on the regular polyhedron (cube and regular Icosahedron).
 Our approach builds on this insight to estimate accurate 360° optical flow for high-resolution ERP images by sampling tangent images uniformly based on regular polyhedra (cube and icosahedron).
 \looseness-1
