--- a/doc/paper_draft/sections/5-discussion.tex
+++ b/doc/paper_draft/sections/5-discussion.tex
@@ -11,12 +11,13 @@ Finally, we blend optical flow to reduce discontinuities at face boundaries.
 %The result shows our method dramatic improve optical flow in 360° images and achieve state-of-the-art performance.
 Our evaluation shows that our method achieves state-of-the-art performance for 360° optical flow estimation.
 
-\TODO{clearly explain the strengths of the methodologies presented in this paper}
+\TODO{clearly explain the strengths of the methodologies presented in this paper; Our approach supports high-resolution optical flow estimation (e.g. 2K×1K), compared to the limited resolutions supported by CNN-based methods due to model size constraints (e.g. 1024×512 [2]).}
 
 
 %%\textbf{Limitation \& Future Work}
 \paragraph{Limitations.}
 \TODO{Large translations.}
+\TODO{My current optical flow stitch code can not support large motion, because the Gnomonic Projection. If the pixel move to the back of the OpenGL camera, the gnomonic projection based optical flow code will generate wrong optical flow.}
 
 
 \paragraph{Future Work.}
