--- a/doc/paper_draft/sections/5-discussion.tex
+++ b/doc/paper_draft/sections/5-discussion.tex
@@ -11,7 +11,9 @@ Finally, we blend optical flow to reduce discontinuities at face boundaries.
 %The result shows our method dramatic improve optical flow in 360° images and achieve state-of-the-art performance.
 Our evaluation shows that our method achieves state-of-the-art performance for 360° optical flow estimation.
 
-\TODO{clearly explain the strengths of the methodologies presented in this paper; Our approach supports high-resolution optical flow estimation (e.g. 2K×1K), compared to the limited resolutions supported by CNN-based methods due to model size constraints (e.g. 1024×512 [2]).}
+
+\new{Our proposed approach overcomes the limited resolutions supported by CNN-based methods due to model size constraints (e.g. 1024$\times$512 \cite{ArtizZAD2020}) by processing tangent images separately.
+This enables the estimation of high-resolution 360° optical flow, for example at 2K$\times$1K resolution, which is not supported by existing methods.}
 
 
 %%\textbf{Limitation \& Future Work}
