--- a/doc/paper_draft/sections/4-result.tex
+++ b/doc/paper_draft/sections/4-result.tex
@@ -200,33 +200,33 @@ Our method succeeds where the underlying optical flow method (DIS) fails, while 
 		&  Method & ${EPE}\downarrow$ & $AAE\downarrow$ & $RMS\downarrow$ & $SEPE\downarrow$ & ${SAAE}\downarrow$ & ${SRMS}\downarrow$ \\
 		\midrule
 		\multirow{5}{*}{\rotatebox[origin=c]{90}{\emph{Circle}}}
-		& \new{OmniFlowNet} &\new{xx.xx} & \new{0.xxxx} & \new{xx.xx} &    \new{0.xxxxx} &    \new{0.xxxx} &    \new{0.xxxx} \\
+		& \new{OmniFlowNet} &\new{15.12} & \new{0.2618} & \new{60.79} &    \new{0.06025} &    \new{0.1316} &    \new{0.3963} \\
 %		& PWC-Net &               16.60  &     0.2994 &     63.44 &     0.05880  &     0.1469  &     0.3845  \\
 %		& RAFT    &               16.56  &     0.2775 &     64.94 &     0.04669  &     0.1482  &     0.3301  \\
 %		& DIS     &               16.50  &     0.2881 &     62.67 &     0.05375  &     0.1566  &     0.3515  \\
 %		& Ours    & \bf \phantom{0}4.988 & \bf 0.1885 & \bf 39.26 & \bf 0.007241 & \bf 0.05278 & \bf 0.01824 \\
-		& PWC-Net &    \new{xx.xx} &    \new{0.xxxx} &    \new{xx.xx} &    \new{0.xxxxx} &    \new{0.xxxx} &    \new{0.xxxx} \\
-		& RAFT    &    \new{xx.xx} &    \new{0.xxxx} &    \new{xx.xx} &    \new{0.xxxxx} &    \new{0.xxxx} &    \new{0.xxxx} \\
-		& DIS     &    \new{xx.xx} &    \new{0.xxxx} &    \new{xx.xx} &    \new{0.xxxxx} &    \new{0.xxxx} &    \new{0.xxxx} \\
-		& Ours    & \bf\new{xx.xx} & \bf\new{0.xxxx} & \bf\new{xx.xx} & \bf\new{0.xxxxx} & \bf\new{0.xxxx} & \bf\new{0.xxxx} \\
+		& PWC-Net &    \new{15.73} &    \new{0.2701} &    \new{61.50} &    \new{0.05403} &    \new{0.1406} &    \new{0.3693} \\
+		& RAFT    &    \new{15.75} &    \new{0.2769} &    \new{63.34} &    \new{0.04619} &    \new{0.1461} &    \new{0.3349} \\
+		& DIS     &    \new{16.31} &    \new{0.2818} &    \new{62.29} &    \new{0.05430} &    \new{0.1503} &    \new{0.3578} \\
+		& Ours    & \bf\new{\phantom{0}3.507} & \bf\new{0.1694} & \bf\new{34.21} & \bf\new{0.005370} & \bf\new{0.03480} & \bf\new{0.01021} \\
 		\midrule
 		\multirow{5}{*}{\rotatebox[origin=c]{90}{\emph{Line}}}
-		& \new{OmniFlowNet} &\new{xx.xx} & \new{0.xxxx} & \new{xx.xx} &    \new{0.xxxxx} &    \new{0.xxxx} &    \new{0.xxxx} \\
+		& \new{OmniFlowNet} &\new{30.64} & \new{0.2515} & \new{92.36} &    \new{0.1229} &    \new{0.1276} &    \new{0.5390} \\
 %		& PWC-Net &           32.25  &     0.2139 & 93.32     &     0.1215  &     0.1429  &     0.5289  \\
 %		& RAFT    &           31.75  &     0.2908 & 96.55     &     0.08752 &     0.1595  &     0.4201  \\
 %		& DIS     &           35.55  &     0.3328 & 98.24     &     0.1149  &     0.2063  &     0.4768  \\
 %		& Ours    &    \bf    10.41  & \bf 0.2461 & \bf 55.78 & \bf 0.01533 & \bf 0.08943 & \bf 0.03448 \\
-		& PWC-Net &    \new{xx.xx} &    \new{0.xxxx} &    \new{xx.xx} &    \new{0.xxxxx} &    \new{0.xxxx} &    \new{0.xxxx} \\
-		& RAFT    &    \new{xx.xx} &    \new{0.xxxx} &    \new{xx.xx} &    \new{0.xxxxx} &    \new{0.xxxx} &    \new{0.xxxx} \\
-		& DIS     &    \new{xx.xx} &    \new{0.xxxx} &    \new{xx.xx} &    \new{0.xxxxx} &    \new{0.xxxx} &    \new{0.xxxx} \\
-		& Ours    & \bf\new{xx.xx} & \bf\new{0.xxxx} & \bf\new{xx.xx} & \bf\new{0.xxxxx} & \bf\new{0.xxxx} & \bf\new{0.xxxx} \\
+		& PWC-Net &    \new{32.23} &    \new{0.2594} &    \new{93.27} &    \new{0.1259} &     \new{0.1358} &    \new{0.5414} \\
+		& RAFT    &    \new{32.38} &    \new{0.2935} &    \new{97.46} &    \new{0.08787} &    \new{0.1642} &    \new{0.4180} \\
+		& DIS     &    \new{36.06} &    \new{0.3357} &    \new{99.07} &    \new{0.1127} &    \new{0.2093} &    \new{0.4668} \\
+		& Ours    & \bf\new{\phantom{0}5.839} & \bf\new{0.1971} & \bf\new{40.74} & \bf\new{0.01063} & \bf\new{0.05951} & \bf\new{0.02098} \\
 		\midrule
 		\multirow{5}{*}{\rotatebox[origin=c]{90}{\emph{\new{Random}}}}
-		& \new{OmniFlowNet} &\new{xx.xx} & \new{0.xxxx} & \new{xx.xx} &    \new{0.xxxxx} &    \new{0.xxxx} &    \new{0.xxxx} \\
-		& \new{PWC-Net} &    \new{xx.xx} &    \new{0.xxxx} &    \new{xx.xx} &    \new{0.xxxxx} &    \new{0.xxxx} &    \new{0.xxxx} \\
-		& \new{RAFT}    &    \new{xx.xx} &    \new{0.xxxx} &    \new{xx.xx} &    \new{0.xxxxx} &    \new{0.xxxx} &    \new{0.xxxx} \\
-		& \new{DIS}     &    \new{xx.xx} &    \new{0.xxxx} &    \new{xx.xx} &    \new{0.xxxxx} &    \new{0.xxxx} &    \new{0.xxxx} \\
-		& \new{Ours}    & \bf\new{xx.xx} & \bf\new{0.xxxx} & \bf\new{xx.xx} & \bf\new{0.xxxxx} & \bf\new{0.xxxx} & \bf\new{0.xxxx} \\
+		& \new{OmniFlowNet} &\new{40.50} & \new{0.3229} & \new{106.2} &    \new{0.1321} &    \new{0.1940} &    \new{0.5034} \\
+		& \new{PWC-Net} &    \new{41.98} &    \new{0.3294} &    \new{106.9} &    \new{0.1438} &    \new{0.2118} &    \new{0.5203} \\
+		& \new{RAFT}    &    \new{38.31} &    \new{0.2978} &    \new{104.2} &    \new{0.1143} &    \new{0.1766} &    \new{0.4557} \\
+		& \new{DIS}     &    \new{47.29} &    \new{0.4203} &    \new{113.2} &    \new{0.1728} &    \new{0.3000} &    \new{0.5545} \\
+		& \new{Ours}    & \bf\new{14.10} & \bf\new{0.2192} & \bf\new{\phantom{0}59.78} & \bf\new{0.02717} & \bf\new{0.08849} & \bf\new{0.05753} \\
 		\midrule
 %		\multirow{4}{*}{\rotatebox[origin=c]{90}{\emph{All}}} % All = Circle + Line
 %		& PWC-Net &               18.95  &     0.2866 &     67.92 &     0.06822 &     0.1463  &     0.4062  \\
@@ -234,11 +234,11 @@ Our method succeeds where the underlying optical flow method (DIS) fails, while 
 %		& DIS     &               25.74  &     0.3045 &     79.94 &     0.08347 &     0.1797  &     0.4127  \\
 %		& Ours    & \bf \phantom{0}8.602 & \bf 0.2270 & \bf 50.27 & \bf 0.01264 & \bf 0.07722 & \bf 0.02907 \\
 		\multirow{5}{*}{\rotatebox[origin=c]{90}{\emph{All}}} % All = Circle + Line + Random
-		& \new{OmniFlowNet} &\new{xx.xx} & \new{0.xxxx} & \new{xx.xx} &    \new{0.xxxxx} &    \new{0.xxxx} &    \new{0.xxxx} \\
-		& PWC-Net &    \new{xx.xx} &    \new{0.xxxx} &    \new{xx.xx} &    \new{0.xxxxx} &    \new{0.xxxx} &    \new{0.xxxx} \\
-		& RAFT    &    \new{xx.xx} &    \new{0.xxxx} &    \new{xx.xx} &    \new{0.xxxxx} &    \new{0.xxxx} &    \new{0.xxxx} \\
-		& DIS     &    \new{xx.xx} &    \new{0.xxxx} &    \new{xx.xx} &    \new{0.xxxxx} &    \new{0.xxxx} &    \new{0.xxxx} \\
-		& Ours    & \bf\new{xx.xx} & \bf\new{0.xxxx} & \bf\new{xx.xx} & \bf\new{0.xxxxx} & \bf\new{0.xxxx} & \bf\new{0.xxxx} \\
+		& \new{OmniFlowNet} &\new{28.76} & \new{0.2788} & \new{86.48} &    \new{0.1051} &    \new{0.1511} &    \new{0.4797} \\
+		& PWC-Net &    \new{29.98} &    \new{0.2863} &    \new{87.23} &    \new{0.1079} &    \new{0.1627} &    \new{0.4770} \\
+		& RAFT    &    \new{28.81} &    \new{0.2893} &    \new{88.34} &    \new{0.08278} &    \new{0.1623} &    \new{0.4029} \\
+		& DIS     &    \new{33.22} &    \new{0.3459} &    \new{91.54} &    \new{0.1133} &    \new{0.2199} &    \new{0.4597} \\
+		& Ours    & \bf\new{\phantom{0}7.701} & \bf\new{0.1946} & \bf\new{44.62} & \bf\new{0.01411} & \bf\new{0.06027} & \bf\new{0.02905} \\
 		\bottomrule
 	\end{tabular}}%
 \end{table}
@@ -417,30 +417,40 @@ However, `w/o weight' performs slightly better on the complete dataset.
 %		& w/o weight   & \bf 4.854 & \bf 0.1863 & \bf 37.10 & \bf 0.007118 & \bf 0.05074 &     0.01899 \\
 %		& w/o ERP      &     4.961 &     0.1871 &     38.32 &     0.007165 &     0.05094 &     0.01504 \\
 %		& w/o cubemap  &     4.956 &     0.1881 &     38.22 &     0.007171 &     0.05241 & \bf 0.01451 \\
-		& Full method  &\new{x.xxx}&\new{0.xxxx}&\new{xx.xx}&\new{0.0xxxxx}&\new{0.0xxxx}&\new{0.0xxxx}\\
-		& w/o weight   &\new{x.xxx}&\new{0.xxxx}&\new{xx.xx}&\new{0.0xxxxx}&\new{0.0xxxx}&\new{0.0xxxx}\\
-		& w/o ERP      &\new{x.xxx}&\new{0.xxxx}&\new{xx.xx}&\new{0.0xxxxx}&\new{0.0xxxx}&\new{0.0xxxx}\\
-		& w/o cubemap  &\new{x.xxx}&\new{0.xxxx}&\new{xx.xx}&\new{0.0xxxxx}&\new{0.0xxxx}&\new{0.0xxxx}\\
+		& Full method  &     \new{3.507} &     \new{0.1694} &     \new{34.21} & \bf \new{0.005370} &     \new{0.03480} &     \new{0.01021 } \\ 
+		& w/o weight   &     \new{3.616} &     \new{0.1692} &     \new{34.86} &     \new{0.005405} &     \new{0.03478} &     \new{0.01235 } \\
+		& w/o ERP      & \bf \new{3.434} & \bf \new{0.1688} & \bf \new{33.81} &     \new{0.005376} & \bf \new{0.03437} &     \new{0.009951} \\ 
+		& w/o cubemap  &     \new{3.533} &     \new{0.1698} &     \new{34.04} &     \new{0.005399} &     \new{0.03519} & \bf \new{0.009730} \\ 
+		& w/o ico      &     \new{3.481} &     \new{0.1711} &     \new{30.45} &     \new{0.006040} &     \new{0.03724} &     \new{0.01412 } \\ 
 		\midrule
 		\multirow{4}{*}{\rotatebox[origin=c]{90}{\emph{Line}}} 
 %		& Full method  &     10.41 &     0.2461 &     55.78 & \bf 0.01533 &     0.08943 & \bf 0.03448 \\
 %		& w/o weight   & \bf 10.13 &     0.2447 & \bf 48.60 &     0.01600 & \bf 0.08798 &     0.03566 \\
 %		& w/o ERP      &     10.82 & \bf 0.2648 &     56.48 &     0.01580 &     0.09090 &     0.03519 \\
 %		& w/o cubemap  &     10.88 &     0.2484 &     57.61 &     0.01575 &     0.08987 &     0.03535 \\
-		& Full method  &\new{x.xxx}&\new{0.xxxx}&\new{xx.xx}&\new{0.0xxxx}&\new{0.0xxxx}&\new{0.0xxxx}\\
-		& w/o weight   &\new{x.xxx}&\new{0.xxxx}&\new{xx.xx}&\new{0.0xxxx}&\new{0.0xxxx}&\new{0.0xxxx}\\
-		& w/o ERP      &\new{x.xxx}&\new{0.xxxx}&\new{xx.xx}&\new{0.0xxxx}&\new{0.0xxxx}&\new{0.0xxxx}\\
-		& w/o cubemap  &\new{x.xxx}&\new{0.xxxx}&\new{xx.xx}&\new{0.0xxxx}&\new{0.0xxxx}&\new{0.0xxxx}\\
+		& Full method  &     \new{5.839} &     \new{0.1971} &     \new{40.74} &     \new{0.01063} &     \new{0.05951} &     \new{0.02098}  \\
+		& w/o weight   &     \new{5.475} &     \new{0.1960} &     \new{32.36} &     \new{0.01100} & \bf \new{0.05815} &     \new{0.02214}   \\ 
+		& w/o ERP      &     \new{5.749} & \bf \new{0.1945} &     \new{40.11} &     \new{0.01069} &     \new{0.05881} &     \new{0.02107}  \\ 
+		& w/o cubemap  &     \new{5.816} &     \new{0.1953} &     \new{40.09} &     \new{0.01075} &     \new{0.05825} &     \new{0.02136}  \\ 
+		& w/o ico      & \bf \new{4.262} &     \new{0.2042} & \bf \new{26.28} & \bf \new{0.01015} &     \new{0.07242} & \bf \new{0.01818}  \\ 
+		\midrule
+		\multirow{4}{*}{\rotatebox[origin=c]{90}{\emph{Random}}} 
+		& Full method  &     \new{14.10} &     \new{0.2192} &     \new{59.78} &     \new{0.02717} &     \new{0.08849} &     \new{0.05753} \\
+		& w/o weight   & \bf \new{13.66} &     \new{0.2176} &     \new{57.87} &     \new{0.02723} &     \new{0.08679} &     \new{0.05684}  \\ 
+		& w/o ERP      &     \new{15.71} &     \new{0.2211} &     \new{60.81} &     \new{0.03212} &     \new{0.09007} &     \new{0.06161} \\ 
+		& w/o cubemap  &     \new{13.96} & \bf \new{0.2145} &     \new{58.92} & \bf \new{0.02652} & \bf \new{0.08428} & \bf \new{0.05619} \\ 
+		& w/o ico      &     \new{14.81} &     \new{0.2490} & \bf \new{57.15} &     \new{0.03389} &     \new{0.1167 } &     \new{0.06173} \\ 
 		\midrule
 		\multirow{4}{*}{\rotatebox[origin=c]{90}{\emph{All}}}
 %		& Full method  &     8.602 &     0.2270 &     50.27 &     0.01264 &     0.07722 &     0.02907 \\
 %		& w/o weight   & \bf 7.524 & \bf 0.2130 & \bf 42.94 &     0.01161 & \bf 0.06967 &     0.02741 \\
 %		& w/o ERP      &     7.889 &     0.2260 &     47.40 &     0.01149 &     0.07092 &     0.02512 \\
 %		& w/o cubemap  &     7.921 &     0.2182 &     47.91 & \bf 0.01146 &     0.07114 & \bf 0.02492 \\
-		& Full method  &\new{x.xxx}&\new{0.xxxx}&\new{xx.xx}&\new{0.0xxxx}&\new{0.0xxxx}&\new{0.0xxxx}\\
-		& w/o weight   &\new{x.xxx}&\new{0.xxxx}&\new{xx.xx}&\new{0.0xxxx}&\new{0.0xxxx}&\new{0.0xxxx}\\
-		& w/o ERP      &\new{x.xxx}&\new{0.xxxx}&\new{xx.xx}&\new{0.0xxxx}&\new{0.0xxxx}&\new{0.0xxxx}\\
-		& w/o cubemap  &\new{x.xxx}&\new{0.xxxx}&\new{xx.xx}&\new{0.0xxxx}&\new{0.0xxxx}&\new{0.0xxxx}\\
+		& Full method  &     \new{7.701} &     \new{0.1946} &     \new{44.62} & \bf \new{0.01411} &     \new{0.06027} & \bf \new{0.02905}   \\
+		& w/o weight   &     \new{7.585} &     \new{0.1942} &     \new{41.70} &     \new{0.01455} &     \new{0.05991} &     \new{0.03045}  \\
+		& w/o ERP      &     \new{8.298} &     \new{0.1948} &     \new{44.91} &     \new{0.01606} &     \new{0.06109} &     \new{0.03088} \\
+		& w/o cubemap  &     \new{7.771} & \bf \new{0.1932} &     \new{44.35} &     \new{0.01422} & \bf \new{0.05924} &     \new{0.02909} \\
+		& w/o ico      & \bf \new{7.519} &     \new{0.2081} & \bf \new{37.96} &     \new{0.01670} &     \new{0.07547} &     \new{0.03134} \\ 
 		\bottomrule
 	\end{tabular}}%
 \end{table}%\vspace{-2em}
