--- a/doc/paper_draft/sections/4-result.tex
+++ b/doc/paper_draft/sections/4-result.tex
@@ -279,42 +279,42 @@ Our method succeeds where the underlying optical flow method (DIS) fails, while 
 		\labeledfig{images/of_error/office_0_line_1k_0_our_0.4_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(c) Ours}{white} &
 		\labeledfig{images/of_error/office_0_line_1k_0_pwcnet_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(d) PWC-Net}{white} &
 		\labeledfig{images/of_error/office_0_line_1k_0_raft_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(e) RAFT}{white} &
-		\labeledfig{images/of_error/office_0_line_1k_0_omniflownet_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(f) OmniFlowNet}{white}
+		\labeledfig{images/of_error/office_0_line_1k_0_omniflownet_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{\new{(f) OmniFlowNet}}{white}
 		\\[-1.0em]
 		\labeledfig{images/of_error/office_0_line_1k_0_gt_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(g) GT}{white} &
 		\labeledfig{images/of_error/office_0_line_1k_0_dis_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{(h) DIS (SEPE)}{black} &
 		\labeledfig{images/of_error/office_0_line_1k_0_our_0.4_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{(i) Ours (SEPE)}{black} &
 		\labeledfig{images/of_error/office_0_line_1k_0_pwcnet_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{(j) PWC-Net (SEPE)}{black} &
 		\labeledfig{images/of_error/office_0_line_1k_0_raft_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{(k) RAFT (SEPE)}{black} &
-		\labeledfig{images/of_error/office_0_line_1k_0_omniflownet_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{(l) OmniFlowNet (SEPE)}{black}
+		\labeledfig{images/of_error/office_0_line_1k_0_omniflownet_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{\new{(l) OmniFlowNet (SEPE)}}{black}
 		\\[-0.9em]
 		\labeledfig{images/of_error/apartment_0_circ_1k_0_0004_rgb_pano.jpg}{0.165}{(a) $I_t$}{white} &
 		\labeledfig{images/of_error/apartment_0_circ_1k_0_dis_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(b) DIS}{black} &
 		\labeledfig{images/of_error/apartment_0_circ_1k_0_our_0.4_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(c) Ours}{black} &
 		\labeledfig{images/of_error/apartment_0_circ_1k_0_pwcnet_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(d) PWC-Net}{black} &
 		\labeledfig{images/of_error/apartment_0_circ_1k_0_raft_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(e) RAFT}{black} &
-		\labeledfig{images/of_error/apartment_0_circ_1k_0_omniflownet_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(f) OmniFlowNet}{black} 
+		\labeledfig{images/of_error/apartment_0_circ_1k_0_omniflownet_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{\new{(f) OmniFlowNet}}{black} 
 		\\[-1.0em]
 		\labeledfig{images/of_error/apartment_0_circ_1k_0_gt_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(g) GT}{black} &
 		\labeledfig{images/of_error/apartment_0_circ_1k_0_dis_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{(h) DIS (SEPE)}{black} &
 		\labeledfig{images/of_error/apartment_0_circ_1k_0_our_0.4_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{(i) Ours (SEPE)}{black} &
 		\labeledfig{images/of_error/apartment_0_circ_1k_0_pwcnet_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{(j) PWC-Net (SEPE)}{black} &
 		\labeledfig{images/of_error/apartment_0_circ_1k_0_raft_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{(k) RAFT (SEPE)}{black} &
-		\labeledfig{images/of_error/apartment_0_circ_1k_0_omniflownet_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{(l) OmniFlowNet (SEPE)}{black}
+		\labeledfig{images/of_error/apartment_0_circ_1k_0_omniflownet_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{\new{(l) OmniFlowNet (SEPE)}}{black}
 		\\[-0.9em]
 		\labeledfig{images/of_error/frl_apartment_0_rand_1k_0_0004_rgb_pano.jpg}{0.165}{(a) $I_t$}{black} &
 		\labeledfig{images/of_error/frl_apartment_0_rand_1k_0_dis_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(b) DIS}{black} &
 		\labeledfig{images/of_error/frl_apartment_0_rand_1k_0_our_0.4_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(c) Ours}{black} &
 		\labeledfig{images/of_error/frl_apartment_0_rand_1k_0_pwcnet_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(d) PWC-Net}{black} &
 		\labeledfig{images/of_error/frl_apartment_0_rand_1k_0_raft_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(e) RAFT}{black} &
-		\labeledfig{images/of_error/frl_apartment_0_rand_1k_0_omniflownet_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(f) OmniFlowNet}{black}
+		\labeledfig{images/of_error/frl_apartment_0_rand_1k_0_omniflownet_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{\new{(f) OmniFlowNet}}{black}
 		\\[-1.0em]
 		\labeledfig{images/of_error/frl_apartment_0_rand_1k_0_gt_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(g) GT}{black} &
 		\labeledfig{images/of_error/frl_apartment_0_rand_1k_0_dis_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{(h) DIS (SEPE)}{black} &
 		\labeledfig{images/of_error/frl_apartment_0_rand_1k_0_our_0.4_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{(i) Ours (SEPE)}{black} &
 		\labeledfig{images/of_error/frl_apartment_0_rand_1k_0_pwcnet_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{(j) PWC-Net (SEPE)}{black} &
 		\labeledfig{images/of_error/frl_apartment_0_rand_1k_0_raft_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{(k) RAFT (SEPE)}{black} &
-		\labeledfig{images/of_error/frl_apartment_0_rand_1k_0_omniflownet_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{(l) OmniFlowNet (SEPE)}{black}
+		\labeledfig{images/of_error/frl_apartment_0_rand_1k_0_omniflownet_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{\new{(l) OmniFlowNet (SEPE)}}{black}
 	\end{tabular}
 	\caption{\label{fig:exp:compflow}%
 		Estimated 360° optical flow and error heatmaps on the Replica 360° dataset:
@@ -364,21 +364,21 @@ The differences between methods is less pronounced than in the Replica 360° dat
 		\labeledfig{images/of_warp/BeihaiPark_our_weight_0549_opticalflow_forward_pano.flo_flow_vis.jpg}{0.165}{(c) Ours}{black} &
 		\labeledfig{images/of_warp/BeihaiPark_pwcnet_0549_opticalflow_forward_pano.flo_flow_vis.jpg}{0.165}{(d) PWC-Net}{black} &
 		\labeledfig{images/of_warp/BeihaiPark_raft_0549_opticalflow_forward_pano.flo_flow_vis.jpg}{0.165}{(e) RAFT}{black} &
-		\labeledfig{images/of_warp/BeihaiPark_omniflownet_0549_opticalflow_forward_pano.flo_flow_vis.jpg}{0.165}{(f) OmniFlowNet}{black}
+		\labeledfig{images/of_warp/BeihaiPark_omniflownet_0549_opticalflow_forward_pano.flo_flow_vis.jpg}{0.165}{\new{(f) OmniFlowNet}}{black}
 		\\[-1.0em]
 		\labeledfig{images/of_warp/BeihaiPark_panoramic-0550.jpg}{0.165}{(g) $I_{t+1}$}{black} &
 		\labeledfig{images/of_warp/BeihaiPark_dis_0549_opticalflow_forward_pano.flo_wrap.jpg}{0.165}{(h) DIS (Warp)}{black} &
 		\labeledfig{images/of_warp/BeihaiPark_our_weight_0549_opticalflow_forward_pano.flo_wrap.jpg}{0.165}{(i) Ours (Warp)}{black} &
 		\labeledfig{images/of_warp/BeihaiPark_pwcnet_0549_opticalflow_forward_pano.flo_wrap.jpg}{0.165}{(j) PWC-Net (Warp)}{black} &
 		\labeledfig{images/of_warp/BeihaiPark_raft_0549_opticalflow_forward_pano.flo_wrap.jpg}{0.165}{(k) RAFT (Warp)}{black} &
-		\labeledfig{images/of_warp/BeihaiPark_omniflownet_0549_opticalflow_forward_pano.flo_wrap.jpg}{0.165}{(l) OmniFlowNet (Warp)}{black}
+		\labeledfig{images/of_warp/BeihaiPark_omniflownet_0549_opticalflow_forward_pano.flo_wrap.jpg}{0.165}{\new{(l) OmniFlowNet (Warp)}}{black}
 		\\[-1.0em]
 		&
 		\labeledfig{images/of_warp/BeihaiPark_dis_0549_opticalflow_forward_pano.flo_warp_error_vis.jpg}{0.165}{(m) DIS (Warp)}{black} &
 		\labeledfig{images/of_warp/BeihaiPark_our_weight_0549_opticalflow_forward_pano.flo_warp_error_vis.jpg}{0.165}{(n) Ours (Warp)}{black} &
 		\labeledfig{images/of_warp/BeihaiPark_pwcnet_0549_opticalflow_forward_pano.flo_warp_error_vis.jpg}{0.165}{(o) PWC-Net (Warp)}{black} &
 		\labeledfig{images/of_warp/BeihaiPark_raft_0549_opticalflow_forward_pano.flo_warp_error_vis.jpg}{0.165}{(p) RAFT (Warp)}{black} &
-		\labeledfig{images/of_warp/BeihaiPark_omniflownet_0549_opticalflow_forward_pano.flo_warp_error_vis.jpg}{0.165}{(q) OmniFlowNet (Warp)}{black} 
+		\labeledfig{images/of_warp/BeihaiPark_omniflownet_0549_opticalflow_forward_pano.flo_warp_error_vis.jpg}{0.165}{\new{(q) OmniFlowNet (Warp)}}{black} 
 	\end{tabular}
 	\caption{\label{fig:exp:backwardwarp}%
 		Backward warping results on OmniPhotos' \emph{BeihaiPark} scene:
@@ -398,10 +398,8 @@ The multi-step rotation warping aligns image $I_{t+1}$ to $I_t$ by estimating ro
 The results without ERP optical flow alignment (`w/o ERP') and without cubemap optical flow alignment (`w/o cubemap') are shown in \cref{fig:exp:ablations}.
 %%{analysis result}
 %\TODO{update analysis to match results $\to$}
-\new{\MZY{
-In different type camera motion data different rotation gets best performance.
-But `Full method'make most of and balance each term's advantage, to make it get the best performance on `\emph{All}' data.
-}}
+\new{In different type camera motion data different rotation gets best performance.
+But `Full method'make most of and balance each term's advantage, to make it get the best performance on `\emph{All}' data.}
 %The `w/o ERP' error is higher than the `w/o cubemap' error for both `\emph{Line}' and `\emph{All}' data,
 %because the ERP optical flow is the global motion, which can handle large pixel motion.
 %as the ERP-based rotation estimation better handles large pixel motions.
@@ -415,7 +413,7 @@ The result without blending weight is shown as `w/o weight' in \cref{fig:exp:abl
 %\TODO{update analysis to match results $\to$}
 %Our full method performs best for `\emph{Line}' data as helps the optical flow stitching overcome errors caused by large pixel motion.
 %However, `w/o weight' performs slightly better on the complete dataset.
-\new{\MZY{The `Ful Method' outperforms the `w/o weight' because the helps the optical flow stitching weight overcome errors caused by large pixel motion.}}
+\new{The `Ful Method' outperforms the `w/o weight' because the helps the optical flow stitching weight overcome errors caused by large pixel motion.}
 
 
 \begin{table}%[h!]
@@ -433,60 +431,60 @@ The result without blending weight is shown as `w/o weight' in \cref{fig:exp:abl
 		% & w/o weight   & \bf 4.854 & \bf 0.1863 & \bf 37.10 & \bf 0.007118 & \bf 0.05074 &     0.01899 \\
 		% & w/o ERP      &     4.961 &     0.1871 &     38.32 &     0.007165 &     0.05094 &     0.01504 \\
 		% & w/o cubemap  &     4.956 &     0.1881 &     38.22 &     0.007171 &     0.05241 & \bf 0.01451 \\
-		% & Full method  &     \new{3.507} &     \new{0.1694} &     \new{34.21} & \bf \new{0.005370} &     \new{0.03480} &     \new{0.01021 } \\ 
-		% & w/o weight   &     \new{3.616} &     \new{0.1692} &     \new{34.86} &     \new{0.005405} &     \new{0.03478} &     \new{0.01235 } \\
-		% & w/o ERP      & \bf \new{3.434} & \bf \new{0.1688} & \bf \new{33.81} &     \new{0.005376} & \bf \new{0.03437} &     \new{0.009951} \\ 
-		% & w/o cubemap  &     \new{3.533} &     \new{0.1698} &     \new{34.04} &     \new{0.005399} &     \new{0.03519} & \bf \new{0.009730} \\ 
-		% & w/o ico      &     \new{3.481} &     \new{0.1711} &     \new{30.45} &     \new{0.006040} &     \new{0.03724} &     \new{0.01412 } \\
-		& Full method  &     \new{3.507} &     \new{0.1694} &     \new{34.21} &     \new{0.005370} &     \new{0.03480} &     \new{0.01021 } \\ 
+		& Full method  &     \new{3.507} &     \new{0.1694} &     \new{34.21} & \bf \new{0.005370} &     \new{0.03480} &     \new{0.01021 } \\ 
 		& w/o weight   &     \new{3.616} &     \new{0.1692} &     \new{34.86} &     \new{0.005405} &     \new{0.03478} &     \new{0.01235 } \\
-		& w/o ERP      &     \new{3.434} &     \new{0.1688} &     \new{33.81} &     \new{0.005376} &     \new{0.03437} &     \new{0.009951} \\ 
-		& w/o cubemap  &     \new{3.533} &     \new{0.1698} &     \new{34.04} &     \new{0.005399} &     \new{0.03519} &     \new{0.009730} \\ 
-		& w/o ico      &     \new{3.481} &     \new{0.1711} &     \new{30.45} &     \new{0.006040} &     \new{0.03724} &     \new{0.01412 } \\ 
+		& w/o ERP      & \bf \new{3.434} & \bf \new{0.1688} & \bf \new{33.81} &     \new{0.005376} & \bf \new{0.03437} &     \new{0.009951} \\ 
+		& w/o cubemap  &     \new{3.533} &     \new{0.1698} &     \new{34.04} &     \new{0.005399} &     \new{0.03519} & \bf \new{0.009730} \\ 
+		& w/o ico      &     \new{3.481} &     \new{0.1711} &     \new{30.45} &     \new{0.006040} &     \new{0.03724} &     \new{0.01412 } \\
+		% & Full method  &     \new{3.507} &     \new{0.1694} &     \new{34.21} &     \new{0.005370} &     \new{0.03480} &     \new{0.01021 } \\ 
+		% & w/o weight   &     \new{3.616} &     \new{0.1692} &     \new{34.86} &     \new{0.005405} &     \new{0.03478} &     \new{0.01235 } \\
+		% & w/o ERP      &     \new{3.434} &     \new{0.1688} &     \new{33.81} &     \new{0.005376} &     \new{0.03437} &     \new{0.009951} \\ 
+		% & w/o cubemap  &     \new{3.533} &     \new{0.1698} &     \new{34.04} &     \new{0.005399} &     \new{0.03519} &     \new{0.009730} \\ 
+		% & w/o ico      &     \new{3.481} &     \new{0.1711} &     \new{30.45} &     \new{0.006040} &     \new{0.03724} &     \new{0.01412 } \\ 
 		\midrule
 		\multirow{4}{*}{\rotatebox[origin=c]{90}{\emph{Line}}} 
 		% & Full method  &     10.41 &     0.2461 &     55.78 & \bf 0.01533 &     0.08943 & \bf 0.03448 \\
 		% & w/o weight   & \bf 10.13 &     0.2447 & \bf 48.60 &     0.01600 & \bf 0.08798 &     0.03566 \\
 		% & w/o ERP      &     10.82 & \bf 0.2648 &     56.48 &     0.01580 &     0.09090 &     0.03519 \\
 		% & w/o cubemap  &     10.88 &     0.2484 &     57.61 &     0.01575 &     0.08987 &     0.03535 \\
-		% & Full method  &     \new{5.839} &     \new{0.1971} &     \new{40.74} &     \new{0.01063} &     \new{0.05951} &     \new{0.02098}  \\
-		% & w/o weight   &     \new{5.475} &     \new{0.1960} &     \new{32.36} &     \new{0.01100} & \bf \new{0.05815} &     \new{0.02214}   \\ 
-		% & w/o ERP      &     \new{5.749} & \bf \new{0.1945} &     \new{40.11} &     \new{0.01069} &     \new{0.05881} &     \new{0.02107}  \\ 
-		% & w/o cubemap  &     \new{5.816} &     \new{0.1953} &     \new{40.09} &     \new{0.01075} &     \new{0.05825} &     \new{0.02136}  \\ 
-		% & w/o ico      & \bf \new{4.262} &     \new{0.2042} & \bf \new{26.28} & \bf \new{0.01015} &     \new{0.07242} & \bf \new{0.01818}  \\ 
 		& Full method  &     \new{5.839} &     \new{0.1971} &     \new{40.74} &     \new{0.01063} &     \new{0.05951} &     \new{0.02098}  \\
-		& w/o weight   &     \new{5.475} &     \new{0.1960} &     \new{32.36} &     \new{0.01100} &     \new{0.05815} &     \new{0.02214}   \\ 
-		& w/o ERP      &     \new{5.749} &     \new{0.1945} &     \new{40.11} &     \new{0.01069} &     \new{0.05881} &     \new{0.02107}  \\ 
+		& w/o weight   &     \new{5.475} &     \new{0.1960} &     \new{32.36} &     \new{0.01100} & \bf \new{0.05815} &     \new{0.02214}   \\ 
+		& w/o ERP      &     \new{5.749} & \bf \new{0.1945} &     \new{40.11} &     \new{0.01069} &     \new{0.05881} &     \new{0.02107}  \\ 
 		& w/o cubemap  &     \new{5.816} &     \new{0.1953} &     \new{40.09} &     \new{0.01075} &     \new{0.05825} &     \new{0.02136}  \\ 
-		& w/o ico      &     \new{4.262} &     \new{0.2042} &     \new{26.28} &     \new{0.01015} &     \new{0.07242} &     \new{0.01818}  \\ 
+		& w/o ico      & \bf \new{4.262} &     \new{0.2042} & \bf \new{26.28} & \bf \new{0.01015} &     \new{0.07242} & \bf \new{0.01818}  \\ 
+		% & Full method  &     \new{5.839} &     \new{0.1971} &     \new{40.74} &     \new{0.01063} &     \new{0.05951} &     \new{0.02098}  \\
+		% & w/o weight   &     \new{5.475} &     \new{0.1960} &     \new{32.36} &     \new{0.01100} &     \new{0.05815} &     \new{0.02214}   \\ 
+		% & w/o ERP      &     \new{5.749} &     \new{0.1945} &     \new{40.11} &     \new{0.01069} &     \new{0.05881} &     \new{0.02107}  \\ 
+		% & w/o cubemap  &     \new{5.816} &     \new{0.1953} &     \new{40.09} &     \new{0.01075} &     \new{0.05825} &     \new{0.02136}  \\ 
+		% & w/o ico      &     \new{4.262} &     \new{0.2042} &     \new{26.28} &     \new{0.01015} &     \new{0.07242} &     \new{0.01818}  \\ 
 		\midrule
 		\multirow{4}{*}{\rotatebox[origin=c]{90}{\emph{Random}}} 
-		% & Full method  &     \new{14.10} &     \new{0.2192} &     \new{59.78} &     \new{0.02717} &     \new{0.08849} &     \new{0.05753} \\
-		% & w/o weight   & \bf \new{13.66} &     \new{0.2176} &     \new{57.87} &     \new{0.02723} &     \new{0.08679} &     \new{0.05684}  \\ 
-		% & w/o ERP      &     \new{15.71} &     \new{0.2211} &     \new{60.81} &     \new{0.03212} &     \new{0.09007} &     \new{0.06161} \\ 
-		% & w/o cubemap  &     \new{13.96} & \bf \new{0.2145} &     \new{58.92} & \bf \new{0.02652} & \bf \new{0.08428} & \bf \new{0.05619} \\ 
-		% & w/o ico      &     \new{14.81} &     \new{0.2490} & \bf \new{57.15} &     \new{0.03389} &     \new{0.1167 } &     \new{0.06173} \\ 
 		& Full method  &     \new{14.10} &     \new{0.2192} &     \new{59.78} &     \new{0.02717} &     \new{0.08849} &     \new{0.05753} \\
-		& w/o weight   &     \new{13.66} &     \new{0.2176} &     \new{57.87} &     \new{0.02723} &     \new{0.08679} &     \new{0.05684}  \\ 
+		& w/o weight   & \bf \new{13.66} &     \new{0.2176} &     \new{57.87} &     \new{0.02723} &     \new{0.08679} &     \new{0.05684}  \\ 
 		& w/o ERP      &     \new{15.71} &     \new{0.2211} &     \new{60.81} &     \new{0.03212} &     \new{0.09007} &     \new{0.06161} \\ 
-		& w/o cubemap  &     \new{13.96} &     \new{0.2145} &     \new{58.92} &     \new{0.02652} &     \new{0.08428} &     \new{0.05619} \\ 
-		& w/o ico      &     \new{14.81} &     \new{0.2490} &     \new{57.15} &     \new{0.03389} &     \new{0.1167 } &     \new{0.06173} \\ 
+		& w/o cubemap  &     \new{13.96} & \bf \new{0.2145} &     \new{58.92} & \bf \new{0.02652} & \bf \new{0.08428} & \bf \new{0.05619} \\ 
+		& w/o ico      &     \new{14.81} &     \new{0.2490} & \bf \new{57.15} &     \new{0.03389} &     \new{0.1167 } &     \new{0.06173} \\ 
+		% & Full method  &     \new{14.10} &     \new{0.2192} &     \new{59.78} &     \new{0.02717} &     \new{0.08849} &     \new{0.05753} \\
+		% & w/o weight   &     \new{13.66} &     \new{0.2176} &     \new{57.87} &     \new{0.02723} &     \new{0.08679} &     \new{0.05684}  \\ 
+		% & w/o ERP      &     \new{15.71} &     \new{0.2211} &     \new{60.81} &     \new{0.03212} &     \new{0.09007} &     \new{0.06161} \\ 
+		% & w/o cubemap  &     \new{13.96} &     \new{0.2145} &     \new{58.92} &     \new{0.02652} &     \new{0.08428} &     \new{0.05619} \\ 
+		% & w/o ico      &     \new{14.81} &     \new{0.2490} &     \new{57.15} &     \new{0.03389} &     \new{0.1167 } &     \new{0.06173} \\ 
 		\midrule
 		\multirow{4}{*}{\rotatebox[origin=c]{90}{\emph{All}}}
 		% & Full method  &     8.602 &     0.2270 &     50.27 &     0.01264 &     0.07722 &     0.02907 \\
 		% & w/o weight   & \bf 7.524 & \bf 0.2130 & \bf 42.94 &     0.01161 & \bf 0.06967 &     0.02741 \\
 		% & w/o ERP      &     7.889 &     0.2260 &     47.40 &     0.01149 &     0.07092 &     0.02512 \\
 		% & w/o cubemap  &     7.921 &     0.2182 &     47.91 & \bf 0.01146 &     0.07114 & \bf 0.02492 \\
-		% & Full method  &     \new{7.701} &     \new{0.1946} &     \new{44.62} & \bf \new{0.01411} &     \new{0.06027} & \bf \new{0.02905}   \\
-		% & w/o weight   &     \new{7.585} &     \new{0.1942} &     \new{41.70} &     \new{0.01455} &     \new{0.05991} &     \new{0.03045}  \\
-		% & w/o ERP      &     \new{8.298} &     \new{0.1948} &     \new{44.91} &     \new{0.01606} &     \new{0.06109} &     \new{0.03088} \\
-		% & w/o cubemap  &     \new{7.771} & \bf \new{0.1932} &     \new{44.35} &     \new{0.01422} & \bf \new{0.05924} &     \new{0.02909} \\
-		% & w/o ico      & \bf \new{7.519} &     \new{0.2081} & \bf \new{37.96} &     \new{0.01670} &     \new{0.07547} &     \new{0.03134} \\ 
-		& Full method  &     \new{7.701} &     \new{0.1946} &     \new{44.62} &     \new{0.01411} &     \new{0.06027} &     \new{0.02905}   \\
+		& Full method  &     \new{7.701} &     \new{0.1946} &     \new{44.62} & \bf \new{0.01411} &     \new{0.06027} & \bf \new{0.02905}   \\
 		& w/o weight   &     \new{7.585} &     \new{0.1942} &     \new{41.70} &     \new{0.01455} &     \new{0.05991} &     \new{0.03045}  \\
 		& w/o ERP      &     \new{8.298} &     \new{0.1948} &     \new{44.91} &     \new{0.01606} &     \new{0.06109} &     \new{0.03088} \\
-		& w/o cubemap  &     \new{7.771} &     \new{0.1932} &     \new{44.35} &     \new{0.01422} &     \new{0.05924} &     \new{0.02909} \\
-		& w/o ico      &     \new{7.519} &     \new{0.2081} &     \new{37.96} &     \new{0.01670} &     \new{0.07547} &     \new{0.03134} \\ 
+		& w/o cubemap  &     \new{7.771} & \bf \new{0.1932} &     \new{44.35} &     \new{0.01422} & \bf \new{0.05924} &     \new{0.02909} \\
+		& w/o ico      & \bf \new{7.519} &     \new{0.2081} & \bf \new{37.96} &     \new{0.01670} &     \new{0.07547} &     \new{0.03134} \\ 
+		% & Full method  &     \new{7.701} &     \new{0.1946} &     \new{44.62} &     \new{0.01411} &     \new{0.06027} &     \new{0.02905}   \\
+		% & w/o weight   &     \new{7.585} &     \new{0.1942} &     \new{41.70} &     \new{0.01455} &     \new{0.05991} &     \new{0.03045}  \\
+		% & w/o ERP      &     \new{8.298} &     \new{0.1948} &     \new{44.91} &     \new{0.01606} &     \new{0.06109} &     \new{0.03088} \\
+		% & w/o cubemap  &     \new{7.771} &     \new{0.1932} &     \new{44.35} &     \new{0.01422} &     \new{0.05924} &     \new{0.02909} \\
+		% & w/o ico      &     \new{7.519} &     \new{0.2081} &     \new{37.96} &     \new{0.01670} &     \new{0.07547} &     \new{0.03134} \\ 
 		\bottomrule
 	\end{tabular}}%
 \end{table}%\vspace{-2em}
